--- a/Views/Home/DeleteDocument.cshtml
+++ b/Views/Home/DeleteDocument.cshtml
@@ -4,6 +4,7 @@
 @model Document
 
 <h2>Deleting document @Model.Name</h2>
+<a asp-action="Document" asp-route-id="@Model.Id">Document</a>
 <form method="post">
     <label>Enter the name of a document</label>
     <input type="text" name="name" value="" />
