--- a/Views/Home/Document.cshtml
+++ b/Views/Home/Document.cshtml
@@ -9,6 +9,9 @@
 <div>
     <a asp-action="DeleteDocument" asp-route-id="@Model.Id">Delete</a>
 </div>
+<div>
+    <a asp-action="Members" asp-route-id="@Model.Id">Members</a>
+</div>
 
 @section Scripts{
     <script>
