--- a/Views/Home/Members.cshtml
+++ b/Views/Home/Members.cshtml
@@ -75,7 +75,7 @@
                     userName: userName
                 },
                 success: function (data) {
-                    $("[id='memberaaa@aaa.aaa']").remove();
+                    $("[id='member" + userName + "']").remove();
                 }
             });
         }
