--- a/Views/Home/Document.cshtml
+++ b/Views/Home/Document.cshtml
@@ -14,8 +14,10 @@
               name="text"
               style="width: 300px; height: 200px"
               @if (canEdit) { <text> oninput="textChange()" </text> }
-              @if (!canEdit) { <text> disabled</text> }>@Model.Item1.Content</textarea>
+              @if (!canEdit) { <text> disabled</text> }
+              >@Model.Item1.Content</textarea>
 </div>
+<div style="visibility: hidden" id="changingWarning"><span id="changingUser">user_name</span> is typing.</div>
 @if (owner)
 {
     <div>
@@ -39,7 +41,7 @@
 
         function textChange() {
             if (!isChanged) {
-                // send info about user to server
+                sendStartChange();
                 console.log("started changing");
             }
             clearTimeout(changeTextTimer);
@@ -54,6 +56,16 @@
                 },
                 changeWaitTime
             );
+        }
+
+        function sendStartChange() {
+             $.ajax({
+                url: "@Url.Action("DocumentStartChange", "Home")",
+                type: "POST",
+                data: {
+                    id: @Model.Item1.Id
+                }
+            });
         }
 
         function sendText() {
@@ -73,15 +85,24 @@
             setGetTextTimer();
         });
         function setGetTextTimer() {
-            getTextTimer = setInterval(getText, 1000);
+            getTextTimer = setInterval(getText, getTextWaitTime);
         }
         function getText() {
             $.ajax({
-                url: '@Url.Action("GetDocumentContent", "Home")',
+                url: '@Url.Action("GetDocumentInfo", "Home")',
                 type: 'GET',
                 data: { id: @Model.Item1.Id },
                 success: function (data) {
-                    textarea.val(data);
+                    if (data.changingUser != null) {
+                        textarea.attr("disabled", true);
+                        $("#changingWarning").css("visibility", "visible");
+                        $("#changingUser").text(data.changingUser);
+                    } else {
+                        textarea.attr("disabled", false);
+                        $("#changingWarning").css("visibility", "hidden");
+                    }
+                    console.log(data.changingUser);
+                    textarea.val(data.content);
                     console.log("new text received");
                 }
             });
