--- a/Views/Home/DeleteDocument.cshtml
+++ b/Views/Home/DeleteDocument.cshtml
@@ -4,9 +4,19 @@
 @model Document
 
 <h2>Deleting document @Model.Name</h2>
-<a asp-action="Document" asp-route-id="@Model.Id">Back to document</a>
-<form method="post">
-    <label>Enter the name of a document</label>
-    <input type="text" name="name" value="" />
-    <input type="submit" value="Delete" />
-</form>
+<a asp-action="Document" asp-route-id="@Model.Id">Back to document</a><br /><br />
+
+<div class="row">
+    <div class="col-md-4">
+        <form method="post">
+            <div class="form-group">
+                <label class="control-label">Enter the name of a document:</label>
+                <input asp-for="Name" class="form-control" value="" />
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Delete" class="btn btn-default" />
+            </div>
+        </form>
+    </div>
+</div>
