--- a/Views/Home/Members.cshtml
+++ b/Views/Home/Members.cshtml
@@ -9,18 +9,22 @@
 <div>
     <a asp-action="Document" asp-route-id="@Model.Item1">Back to document</a>
 </div>
-
-<div>
-    <input type="text" id="userName" />
-    <select id="roleSelect">
-        @foreach (Role r in Model.Item3)
-        {
-            <option value="@r.Id">@r.Name</option>
-        }
-    </select>
-    <input type="button" onclick="addMember()" value="Add member" />
+<br />
+<div class="row">
+    <div class="col-md-4">
+        <label>User name</label>
+        <input type="text" id="userName" class="form-control" />
+        <label>Role</label>
+        <select id="roleSelect" class="form-control" style="margin-bottom: 10px">
+            @foreach (Role r in Model.Item3)
+            {
+                <option value="@r.Id">@r.Name</option>
+            }
+        </select>
+        <input type="button" class="btn btn-default" onclick="addMember()" value="Add member" />
+    </div>
 </div>
-
+<br />
 <table class="table-condensed">
     <thead>
         <tr>
@@ -63,7 +67,7 @@
         function addMemberRow(data) {
             $("#membersTable").append("<tr id='member" + data.userName + "'><td>" + data.userName +
                 "</td><td>" + data.roleName +
-                "</td><td><input type='button' value='Delete' onclick='deleteMember(\"" + data.userName + "\")'></td></tr>");
+                "</td><td><input type='button' class='btn btn-default' value='Delete' onclick='deleteMember(\"" + data.userName + "\")'></td></tr>");
         }
 
         function deleteMember(userName) {
