--- a/Views/Home/Members.cshtml
+++ b/Views/Home/Members.cshtml
@@ -37,6 +37,8 @@
 
 @section Scripts{
     <script>
+
+
         function addMember() {
             let roleSelect = document.getElementById("roleSelect");
             $.ajax({
@@ -67,9 +69,26 @@
             }
         }
         function addMemberRow(data) {
-            $("#membersTable").append("<tr id='member" + data.userName + "'><td>" + data.userName +
-                "</td><td>" + data.roleName +
-                "</td><td><input type='button' class='btn btn-default' value='Delete' onclick='deleteMember(\"" + data.userName + "\")'></td></tr>");
+            let tr = document.createElement("tr");
+            document.getElementById("membersTable").appendChild(tr);
+            tr.setAttribute("id", "member" + data.userName);
+
+            let td1 = document.createElement("td");
+            tr.appendChild(td1);
+            td1.innerHTML = data.userName;
+
+            let td2 = document.createElement("td");
+            tr.appendChild(td2);
+            td2.innerHTML = data.roleName;
+
+            let td3 = document.createElement("td");
+            tr.appendChild(td3);
+            let delBtn = document.createElement("input");
+            td3.appendChild(delBtn);
+            delBtn.setAttribute("type", "button");
+            delBtn.setAttribute("class", "btn btn-default");
+            delBtn.setAttribute("value", "Delete");
+            delBtn.setAttribute("onclick", "deleteMember('" + data.userName + "')");
         }
 
         function deleteMember(userName) {
@@ -81,7 +100,8 @@
                     userName: userName
                 },
                 success: function () {
-                    $("[id='member" + userName + "']").remove();
+                    let element = document.getElementById("member" + userName);
+                    element.parentNode.removeChild(element);
                 }
             });
         }
